manifests/applications/k8s-oidc-issuer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: oidc-issuer
  name: oidc-issuer
