manifests/applications/k8s-oidc-issuer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-proxy
  namespace: oidc-issuer
  labels:
    app.kubernetes.io/instance: oidc-proxy
    app.kubernetes.io/name: oidc-proxy
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/instance: oidc-proxy
    app.kubernetes.io/name: oidc-proxy
