manifests/applications/k8s-oidc-issuer/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc-issuer
  namespace: oidc-issuer
  labels:
    app.kubernetes.io/instance: oidc-proxy
    app.kubernetes.io/name: oidc-proxy
spec:
  parentRefs:
  - name: shared
    namespace: traefik-system
    sectionName: wildcard-toot-community-https
  hostnames:
  - oidc.toot.community
  rules:
  - matches:
    - path:
        type: Exact
        value: /.well-known/openid-configuration
    backendRefs:
    - name: oidc-proxy
      port: 80
  - matches:
    - path:
        type: Exact
        value: /openid/v1/jwks
    backendRefs:
    - name: oidc-proxy
      port: 80
